--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -16,6 +16,6 @@
       </tr>
     </table>
 
-    <p>This session is to demonstrate how to setup CI CD </p>
+    <p>This session is to demonstration of git commands </p>
   </body>
 </html>
